<resources>
    <string name="app_name">HeyChat</string>
    <string name="Hello">Hello!</string>
    <string name="Beautiful">Beautiful!</string>
    <string name="funny">It\'s so funny!</string>
    <string name="Ok">Ok!</string>
    <string name="idea">Good idea!</string>
    <string name="Message">Message...</string>
    <string name="Group">Create Group Chat</string>
    <string name="Select">Select</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Add_image">Add image</string>
    <string name="Phone">Your phone number</string>
    <string name="Name">Name</string>
    <string name="Password">Password</string>
    <string name="Cpass">Confirm Password</string>
    <string name="Select_Group">Select Group</string>
    <string name="IncomingCall">Incoming Call</string>
    <string name="Listmen">The list of members of the group</string>
    <string name="Addmember">Add member</string>
    <string name="ExitGroup">Exit Group</string>
    <string name="SendingCall">Sending Call</string>
    <string name="privateChat">PRIVATE CHAT WITH OTHER PEOPLE</string>
    <string name="Search_here">Search here ...</string>
    <string name="OTP_Verification">OTP Verification</string>
    <string name="OTPinfo">We will send you an One Time Password on this phone number</string>
    <string name="EnterNumber">Enter Phone Number</string>
    <string name="GetOTP">Get OTP</string>
    <string name="Create">Create</string>
    <string name="SignIn">Sign In</string>
    <string name="Login">Login</string>
    <string name="New_user">New user? Register now?</string>
    <string name="Select_User">Select User</string>
    <string name="EnterOTP">Enter the OTP sent to</string>
    <string name="Not_receiveOTP">Didn\'t receive the OTP?</string>
    <string name="RESEND_OTP">RESEND OTP</string>
    <string name="Verify_OTP">Verify OTP</string>
    <string name="Edit_profile">Edit profile</string>
    <string name="Language">Language</string>
    <string name="Text_size">Text size</string>
    <string name="Private_account">Private account</string>
    <string name="BLOCK_SCREENSHOT">BLOCK SCREENSHOT</string>
    <string name="Log_out">Log out</string>
    <string name="Add">Add</string>
    <string name="Close">Close</string>
    <string name="Yes">Yes</string>
    <string name="BlockScreenShot">BlockScreenShot</string>
    <string name="Unblock">Unblock</string>
    <string name="ChangeLeader">Change Team Leader</string>
    <string name="DeleteMember">Delete Member</string>
    <string name="Delete">Delete</string>
    <string name="GroupMember">Group\'s Member</string>
    <string name="English">English</string>
    <string name="VietNamese">Vietnamese</string>
    <string name="LogoutConfirm">Are your sure you wan to log out?</string>
    <string name="Translate">Translate</string>
    <string name="Copy">Copy</string>
    <string name="Detail">Detail</string>
    <string name="Change_size">Change text size</string>
    <string name="in_conversations">Text size in conversations</string>
    <string name="on_tab">Text size on Messages tab</string>
    <string name="FromENGLISH">From ENGLISH</string>
    <string name="EnterEnglish">Enter English text</string>
    <string name="ToVIETNAMESE">To VIETNAMESE</string>
    <string name="Translated">Translated</string>
    <string name="Call">Call</string>
    <string name="Contacts">Contacts</string>
    <string name="Profile">Profile</string>
    <string name="Disable_Shot">Disable screen shot</string>
    <string name="Enable_shot">Enable screen shot</string>
    <string name="Unlock">Unlock</string>
    <string name="Block">Block</string>
    <string name="Notificatio">Notification sent successfully!</string>
    <string name="not_available_video_call">is not available for video call</string>
    <string name="not_available_audio_call">is not available for audio call</string>
    <string name="No_user">No user available</string>
    <string name="Delete_Member">Delete Member Successfully</string>
    <string name="Add_Member">Add Member Successfully</string>
    <string name="isleader">is team leader!</string>
    <string name="DeleteGroup">Delete Group Successfully!</string>
    <string name="ExitGroupSuccessfully">Exit Group Successfully!</string>
    <string name="PermissionDenied">Permission Denied\\n</string>
    <string name="PermissionDeniedNoice">If you reject permission,you can not use this service\\n\\nPlease turn on permissions at [Setting] > [Permission]</string>
    <string name="Chat">Chat</string>
    <string name="ChatDescribe">Chat with friends</string>
    <string name="CallDescribe">Call with friends</string>
    <string name="Invitation_successful">Invitation send successful</string>
    <string name="Invitation_Cancelled">Invitation Cancelled</string>
    <string name="Accepted">Accepted</string>
    <string name="Invitation_Rejected">Invitation Rejected</string>
    <string name="Delete_All_Message">Delete All Message Successfully</string>
    <string name="Wait">Wait...</string>
    <string name="Cancel">Cancel</string>
    <string name="Translated_message">Translated the message</string>
    <string name="Copied_message">Copied the message!</string>
    <string name="Delete_Message">Delete Message Successfully!</string>
    <string name="Phone_9_numbers">Phone Number is 9 numbers</string>
    <string name="User_already">User is already</string>
    <string name="Select_image">Select profile image</string>
    <string name="Enter_name">Enter name</string>
    <string name="Unable_signin">Unable to sign in</string>
    <string name="Enter_email">Enter email</string>
    <string name="Enter_password">Enter password</string>
    <string name="Enter_confirm">Enter confirm password</string>
    <string name="Password_confirm">Password &amp; confirm password muse be same</string>
    <string name="enter_valid_code">Please enter valid code!</string>
    <string name="Incoming_call">Incoming call</string>
    <string name="Outgoing_call">Outgoing call</string>
    <string name="Chose_file">Chose a file</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Uploading">Uploading...</string>
    <string name="Uploaded">Uploaded: </string>
    <string name="Seen">Seen</string>
    <string name="Delivered">Delivered</string>
    <string name="at">at </string>
    <string name="not_seen"> is not seen</string>
    <string name="Everyone_not_seen">Everyone is not seen.</string>
    <string name="Friends">Friends</string>
    <string name="Groups">Groups</string>
    <string name="Update_successful">Update profile successful</string>
    <string name="FontSize">Change font size successful</string>
    <string name="Signing_out">Signing out...</string>
    <string name="Unable_signout">Unable to sign out</string>
    <string name="dialog_message">You need restart to apply change</string>
    <string name="dialog_title">Restart!</string>
    <string name="Disbanding">Disbanding the group</string>
    <string name="Lead">Leader: </string>
</resources>